# phoenix-multi-agent-soc

./: .gitignore  LICENSE  README.md  fab_security_detailed_analysis.json  pyproject.toml
dashboard/: package.json
dashboard/app/: page.tsx
dashboard/app/api/events/: route.ts
dashboard/components/: AlertCard.tsx
examples/: rl.py  run_multi_agent.py  run_triage.py  sign_and_verify.py
examples/rl/: abnormaly.py  cartpole.py  evaluate_trained_dqn.py  evaluate_trained_sac.py  fab_env.py  offline_discrete_sac_from_csv_sb3.py  offline_dqn_from_csv_sb3.py  offline_sac_from_csv_sb3.py  offpolicy_feature_catalog.csv  reinforcement_learning_loop.drawio  rl.py  rl_trust_env.py  train_fav_trust.py  train_rl_trust.py
examples/rl/sb3_offline_sac/: scaler.npz  train_report.json
examples/rl/trust_logs/: evaluations.npz
src/phoenix_multi_agent_soc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phoenix_soc/agents/: autogpt_planner.py  coordinator_graph.py  log_agent.py  react_triage_agent.py  safety_policies.py
src/phoenix_soc/audit/: mcp_envelope.py  verifier.py
src/phoenix_soc/data/: schemas.py
src/phoenix_soc/data/samples/: sample_logs.json
src/phoenix_soc/evaluation/: metrics.py
src/phoenix_soc/tools/: cti_lookup.py  pkcs11_signer.py  wazuh_search.py
tests/: hello_react.py  test_agents.py  test_autoGPT_agent.py  test_log_agent_multithread.py  test_mcp_envelope.py  test_react_agent.py
tests/data/: fab_logs.jsonl
